refine ass parser add split function

--- a/Suber/Suber.csproj
+++ b/Suber/Suber.csproj
@@ -23,7 +23,7 @@
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <StartAction>Project</StartAction>
-    <StartArguments>"D:\迅雷下载\11278614\NTR\NTR-031 夫をママ友に寝取られた腹いせに、ママ友の旦那を寝取った妻！初めは復讐のつもりが他人棒の虜に… 佐々木あき.ass"</StartArguments>
+    <StartArguments>"D:\迅雷下载\11278614\JAV\石原莉奈\SHKD-546 夫の目の前で犯されて 禁忌の欲情 石原莉奈.srt"</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <OutputPath>bin\Release\</OutputPath>
